--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Pawan Gaywade</h1>
     <img src="./assets/images/profilephoto.jpg" height="200" alt="Profile Photo"/>
     <h2>Summary</h2>
-    <p>I am a hardworking and dedicated individual; looking for opportunities in Tech</p>
+    <p>I am a hardworking and dedicated individual; looking for opportunities in Tech.</p>
     <hr />
     <h2>Skills</h2>
     <ul>
